--- a/style.css
+++ b/style.css
@@ -48,10 +48,9 @@
 
 
          .responsive1 {
-           width: 15%;
-           height: auto;
-           float: left;
-         }
+            width: 600px;
+            height: auto;
+            float: right;
 
          .responsive2 {
            width:700px;
