--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@
             float: right;
 
          .responsive2 {
-           width:700px;
-           height:1000px;
-           float: left;
-         }
+             width: 600px;
+             height: auto;
+             float: right;
+                     }
 
          #Image1 {
            margin-right: 100px;
