--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@
 
 
          .responsive1 {
-            width: 600px;
-            height: auto;
-            float: right;
+            width: 15%;
+           height: auto;
+           float: left; }
 
          .responsive2 {
              width: 600px;
