--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@
          .responsive1 {
             width: 15%;
            height: auto;
-           float: left; }
+           float: left; 
+            }
 
          .responsive2 {
              width: 600px;
