--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
 
          }
 
@@ -25,6 +26,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
          }
 
          h3 {
@@ -33,6 +35,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
          }
 
          h4 {
@@ -41,6 +44,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
          }
 
         h5 {
@@ -49,6 +53,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+          text-align: center;
          }
 
         h6 {
@@ -57,6 +62,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+          text-align: center;
          }
 
 
