--- a/style.css
+++ b/style.css
@@ -79,30 +79,30 @@
 
 
 
-         .responsive1 {
+         #responsive1 {
             width: 15%;
            height: auto;
            float: left; 
             }
 
-         .responsive2 {
+         #responsive2 {
              width: 600px;
              height: auto;
              float: right;
                      }
 
-         .responsive3 {
+         #responsive3 {
               height:250px;
               max-width:250px;
                 }
 
-         .responsive4 {
+         #responsive4 {
              height:40px;
              max-width:100px;
            
                 }
 
-         .responsive5 {
+         #responsive5 {
               height:380px;
               max-width:100px;
               
