--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
         .responsive1 {
            width: 15%;
            height: auto;
-           float: left; 
+           float: right; 
           }
 
         .responsive2 {
