--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
            
          }
 
@@ -25,6 +26,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
          }
 
          h3 {
@@ -33,6 +35,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
            
          }
 
@@ -42,6 +45,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+           text-align: center;
            
          }
 
@@ -51,6 +55,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+          text-align: center;
           
          }
 
@@ -60,6 +65,7 @@
             font-weight: bold;
             margin-bottom: 6px;
             width:400px;
+          text-align: center;
           
          }
 
