--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@
            float: right;
           }
 
+         .image {
+           width:300px;
+           height:600px;
+          }
+
            
             .sidebar {
               height: 200px;
